@@ -2,6 +2,7 @@ v 7.5.0
   - API: Add support for Hipchat (Kevin Houdebert)
   - Add time zone configuration on gitlab.yml (Sullivan Senechal)
   - Fix LDAP authentication for Git HTTP access
+  - Fix LDAP config lookup for provider 'ldap'
 
 v 7.4.0
   - Refactored membership logic
